# stellar-tipjar-contracts

./: .gitignore  CHANGES_SUMMARY.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  CONVICTION_VOTING.md  CONVICTION_VOTING_CHECKLIST.md  CONVICTION_VOTING_COMMIT.txt  CONVICTION_VOTING_IMPLEMENTATION.md  CONVICTION_VOTING_QUICKSTART.md  Cargo.toml  DELEGATION_FEATURE.md  DELEGATION_QUICK_REFERENCE.md  DELIVERABLES.md  HOMOMORPHIC_COMMIT.md  HOMOMORPHIC_ENCRYPTION.md  HOMOMORPHIC_QUICK_REFERENCE.md  HOMOMORPHIC_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INSURANCE_POOL.md  NEXT_STEPS.md  README.md  STREAMING_PROTOCOL.md  TODO.md
analytics/: Cargo.toml
analytics/src/: api.rs  lib.rs  main.rs  models.rs
contracts/tipjar/: Cargo.toml  OPTIONS_TRADING.md  errors.txt
contracts/tipjar/benches/: contract_bench.rs  gas_benchmarks.rs
contracts/tipjar/examples/: verify_events.rs
contracts/tipjar/src/: acl.rs  bonding_curve.rs  circuit_breaker.rs  dispute.rs  dynamic_nft.rs  fractional_ownership.rs  lib.rs  liquidity_mining.rs  merkle_distributor.rs  payment_channel.rs  privacy_tip.rs  proxy.rs  quadratic_funding.rs  recursive_proof.rs  soulbound_token.rs  storage.rs  streaming_vesting.rs  swap.rs  threshold_sig.rs  twap_oracle.rs  upgrade.rs  vrf.rs
contracts/tipjar/src/amm/: mod.rs  pool.rs  pricing.rs  swap.rs
contracts/tipjar/src/bridge/: mod.rs  relayer.rs  validator.rs
contracts/tipjar/src/collateral/: liquidation.rs  mod.rs  positions.rs  ratios.rs
contracts/tipjar/src/commit_reveal/: mod.rs
contracts/tipjar/src/conditions/: evaluator.rs  mod.rs  types.rs
contracts/tipjar/src/cross_contract/: mod.rs
contracts/tipjar/src/derivatives/: mod.rs  pricing.rs  risk.rs  settlement.rs
contracts/tipjar/src/escrow/: mod.rs
contracts/tipjar/src/events/: indexing.rs  mod.rs
contracts/tipjar/src/farming/: pool.rs
contracts/tipjar/src/fees/: adjustment.rs  calculator.rs  mod.rs
contracts/tipjar/src/flashloan/: mod.rs
contracts/tipjar/src/futures/: margin.rs  mod.rs  settlement.rs
contracts/tipjar/src/governance/: conviction.rs  conviction_integration.rs  mod.rs  proposals.rs  timelock.rs  voting.rs
contracts/tipjar/src/index_fund/: composition.rs  mod.rs  rebalance.rs  shares.rs
contracts/tipjar/src/inheritance/: mod.rs
contracts/tipjar/src/meta_tx/: mod.rs
contracts/tipjar/src/options/: exercise.rs  mod.rs  pricing.rs
contracts/tipjar/src/oracle/: mod.rs
contracts/tipjar/src/perpetual/: mod.rs
contracts/tipjar/src/plasma/: block.rs  challenge.rs  exit.rs  mod.rs
contracts/tipjar/src/poly_commit/: batch.rs  commitment.rs  mod.rs
contracts/tipjar/src/prediction_market/: mod.rs  odds.rs  settlement.rs
contracts/tipjar/src/privacy/: commitment.rs  contract_interface.rs  encrypted_operations.rs  homomorphic.rs  key_management.rs  mod.rs
contracts/tipjar/src/rate_limit/: mod.rs
contracts/tipjar/src/reputation/: mod.rs
contracts/tipjar/src/rollup/: batch.rs  fraud_proof.rs  mod.rs
contracts/tipjar/src/royalty/: mod.rs
contracts/tipjar/tests/: acl_tests.rs  auction_tests.rs  batch_operations_tests.rs  bonding_curve_tests.rs  circuit_breaker_tests.rs  conviction_voting_tests.rs  credit_tests.rs  delegation_tests.rs  derivatives_tests.rs  events_leaderboard_snapshot_tests.rs  fractional_ownership_tests.rs  homomorphic_encryption_tests.rs  insurance_tests.rs  liquidity_mining_tests.rs  multisig_withdrawal_tests.rs  options_trading_tests.rs  payment_channel_tests.rs  plasma_tests.rs  poly_commit_tests.rs  property_tests.rs  proxy_tests.rs  quadratic_funding_tests.rs  reputation_tests.rs  rollup_tests.rs  royalty_split_tests.rs  sidechain_tests.rs  streaming_tests.rs  subscription_tiers.rs  synthetic_events_tests.rs  synthetic_oracle_tests.rs  synthetic_supply_tests.rs  threshold_sig_tests.rs  tip_message_tests.rs  twap_oracle_tests.rs  vesting_schedule_tests.rs  withdrawal_limits_tests.rs
scripts/migrate/: Cargo.toml  config.toml  export_state.rs  history.rs  import_state.rs  main.rs  rpc_client.rs  transform_state.rs  types.rs  verify_migration.rs
scripts/migrate/tests/: migration_tests.rs
security/: Cargo.toml
security/src/: alerting.rs  anomaly_detector.rs  circuit_breaker.rs  lib.rs  monitor.rs  rate_limiter.rs
security/tests/: security_monitor_tests.rs
tools/doc-generator/: Cargo.toml
tools/doc-generator/src/: main.rs  parser.rs  templates.rs
tools/gas/: Cargo.toml  gas_analyzer.rs  gas_profiler.rs
tools/gas-estimator/: Cargo.toml
tools/gas-estimator/src/: lib.rs  main.rs
tools/gas-estimator/tests/: estimate.rs
(+190 files in other folders)
