[workspace]
members = ["contracts/tipjar", "indexer", "sdk", "tests/integration", "security", "simulator", "tools/gas-estimator", "tools/gas"]
resolver = "2"

[workspace.package]
license = "MIT"
edition = "2021"
repository = "https://github.com/your-org/stellar-tipjar-contracts"

[workspace.dependencies]
soroban-sdk = "22.0.0"
