[package]
name = "tipjar-analytics"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "analytics-server"
path = "src/main.rs"

[dependencies]
anyhow    = "1"
axum      = { version = "0.7", features = ["macros", "json"] }
chrono    = { version = "0.4", features = ["serde"] }
csv       = "1"
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx      = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
thiserror = "2"
tokio     = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower     = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing   = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid      = { version = "1", features = ["v4", "serde"] }
