[package]
name = "migrate"
version = "0.1.0"
edition = "2021"
description = "TipJar contract state migration toolkit — export, transform, import, verify, rollback"
license = "MIT"

[[bin]]
name = "migrate"
path = "main.rs"

[[test]]
name = "migration_tests"
path = "tests/migration_tests.rs"

[dependencies]
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
toml        = "0.8"
sha2        = "0.10"
hex         = "0.4"
chrono      = { version = "0.4",  features = ["serde"] }

[dev-dependencies]
tempfile = "3"
toml     = "0.8"
