[package]
name = "tipjar-doc-generator"
version = "0.1.0"
edition = "2021"
description = "Automated API documentation generator for TipJar contract"

[[bin]]
name = "doc-generator"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
